# fips-cork

./: CMakeLists.txt  README.md  fips.yml
cork64/: CMakeLists.txt
cork64/isct/: triangle.h
cork64/mpir-generic/: CMakeLists.txt
cork64/mpir-generic/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
cork64/mpir-generic/lib/: mpir.lib
